EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==06/23/2011==
JJ: (Sorvani) Stop forcing client to tutorial when button not selected.

==06/22/2011==
Trevius: Added new Perl Mob quest object RemoveNimbusEffect(effectid) for removing permanent nimbus particle effects.
JJ: EVENT_CLICKDOOR now passes the zone version to perl.

==06/20/2011==
JJ: Added message to client when using #instance destroy command.
JJ: Altered doors index to include version to help bring door ids below 256 in zones with multiple versions. Required SQL provided.

Required SQL: utils/sql/svn/1946_doors.sql

==06/19/2011==
JJ: (Leere) Fixed reagent consumption oddities

==06/18/2011==
JJ: Depop with spawntimer reset option now works properly. Default use is changed to false.
KLS: Added some minor stuff
KLS: Added animation field to spawn2 that will control what the spawned npc will do at their guard point. 0 = eaStanding, etc etc
KLS: Tweaked books in SoF+ as they weren't displaying right; it may still not be perfect though I haven't tested it with every book in the game. Required SQL Provided.

==06/17/2011==
KLS: Lowered resolution on QuestTimer process timer to actually allow you to use sub 1 second times.
KLS: Added quest::settimerMS(timer, duration) to allow timers not in integer second intervals.
JJ: Moved ENTERZONE event for items to execute before SCALE_CALC.

==06/15/2011==
Secrets: Modified the pound command #reloadstatic to respawn doors after it despawns them.
Secrets: Made the default door dest zone be "NONE" for quest::createdoor's constructor
Secrets: Added potential fix for UCS assertion error under windows after being up for so long.

==06/14/2011==
Secrets: Opcode to remove all doors.
Secrets: Perl door support.
Secrets: Perl objects added for Doors since first PerlDoors commit: SetSize, GetSize, SetIncline, GetIncline, GetOpenType, SetOpenType